# automation

./: README.md  automation.py  tillo-octrta.py
dependencies/: hugoniot.py  shale__.tillo  tempshale__.tillo  tmp_asteroid.inp  tmp_material.inp
dependencies/copydir/: asteroid.inp  eos  iSALE2D  iSALEMat  iSALEPar  material.inp  parameters.db
dependencies/copydir/Plotting/: DenYld.py  MatTmp.py  StMatTmp.py  YldYAc.py  iMatTmp.inp  iYldYAc.inp
dependencies/output/: hugoniot-shale__-shale__-tillo.txt
dependencies/txtdata/: hugoniot00
eos/: Makefile  Makefile.am  Makefile.in  aluminu.tillo  basalt_.aneos  basalt_.tillo  basaltm.input  calcite.aneos  dry_air.tillo  drytuff.tillo  dunite_.aneos  fuseqtz.tillo  gabbro1.tillo  granit1.aneos  granit2.aneos  granite.tillo  granitm.input  ice____.tillo  iceb___.tillo  iron___.aneos  iron___.tillo  limesto.tillo  miesand.tillo  perfgas.tillo  polyeth.tillo  pyrex__.tillo  quarzit.aneos  shale__.tillo  water__.aneos  water__.tillo  wettuff.tillo
