TOPIC="Equations-Of-State"
eosdir = $(datadir)/eos
eos_DATA = \
	aluminu.tillo \
	basalt_.aneos basalt_.tillo basaltm.input \
	calcite.aneos calcite.input \
	dunite_.aneos dunite_.input \
	forstrm.input fayaltm.input \
	gabbro1.tillo \
	granit1.aneos \
	granit2.aneos \
	granite.input granite.tillo granitm.input \
	h2o_ice.aneos ice____.tillo iceb___.tillo ice____.input \
	iron___.aneos iron___.tillo \
	limesto.tillo \
	miesand.tillo fuseqtz.tillo \
	perfgas.tillo dry_air.tillo \
	polyeth.tillo \
	pyrex__.tillo \
	quarzit.aneos quartz_.input quartzm.input \
	water__.aneos water__.tillo \
	wettuff.tillo \
	drytuff.tillo

all-local:		
		@echo "@VERBLINE@"
		@echo "@VERBACT@ $(TOPIC)"
		@echo "@VERBLINE@"

